@@ -493,8 +493,8 @@ public class Mover {
   }
 
   static class Cli extends Configured implements Tool {
-    private static final String USAGE = "Usage: java "
-        + Mover.class.getSimpleName() + " [-p <files/dirs> | -f <local file>]"
+    private static final String USAGE = "Usage: hdfs mover "
+        + "[-p <files/dirs> | -f <local file>]"
         + "\n\t-p <files/dirs>\ta space separated list of HDFS files/dirs to migrate."
         + "\n\t-f <local file>\ta local file containing a list of HDFS files/dirs to migrate.";
 
